<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsActivty">


    <include layout="@layout/app_bar_layout"
        android:id="@+id/user_details_toolbar"/>

    <!--<LinearLayout
        android:id="@+id/top_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/payment_toolbar"
        android:background="@drawable/rounded_border">

        <TextView
            android:id="@+id/bkash_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bkash"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:background="@drawable/round_left_side"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/rocket_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/rocket"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:padding="10dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/mobile_recharge_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/mobile_recharge"
            android:textColor="@android:color/black"
            android:gravity="center"
            />

    </LinearLayout>-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/image_layour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="40dp"
                android:background="@color/colorPrimaryDark">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_iv"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/user_avater"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/image_layour"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/user_name"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/m_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/user_name"
                    android:layout_below="@id/name_tv"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_border_back"
                    android:padding="10dp"
                    android:layout_marginBottom="5dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/gender_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:layout_below="@+id/name_layout">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender"
                    android:layout_marginTop="5dp"
                    tools:text="@string/male"
                    android:padding="10dp"
                    android:background="@drawable/rounded_border_back"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dob_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:layout_below="@+id/gender_layout">

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date of Birth"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/dob_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dob"
                    android:layout_marginTop="5dp"
                    tools:text="@string/dummy_date"
                    android:padding="10dp"
                    android:background="@drawable/rounded_border_back"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:layout_below="@+id/dob_layout">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_border_back"
                    android:padding="10dp"
                    tools:text="@string/dummy_phone"
                    android:layout_below="@id/phone"
                    android:layout_marginTop="10dp"
                    android:inputType="phone|number"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:layout_below="@+id/phone_layout">

                <TextView
                    android:id="@+id/p_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/p_email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_below="@id/p_email"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_border_back"
                    android:padding="10dp"
                    android:layout_marginBottom="5dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/country_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:layout_below="@+id/email_layout"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/country_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Country Name"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/country_Name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/country"
                    android:inputType="textEmailAddress"
                    android:layout_below="@id/country_Name"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_border_back"
                    android:padding="10dp"
                    android:layout_marginBottom="5dp"
                    />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>